data/derived/comb/progs/unify/prog6860.ml.out
Characters 92-93:
  List.fold_left f base args;;
                 ^
Error: This expression has type int -> 'a -> int list
       but an expression was expected of type int -> 'a -> int
       Type int list is not compatible with type int 
